Hola July he corregido el error que hacia que las imagenes no cargaran y añadi de nuevo el normalize.css

--- a/encriptador.html
+++ b/encriptador.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Encriptador #Challenge ONE</title>
     <!-- CSS link code -->
+    <link rel="stylesheet" href="normalize.css">
     <link rel = "stylesheet" type="text/css" href="codigoCSSEncriptador.css">
     <!-- icon for tittle -->
     <link rel="icon" href="https://www.alurastart.com.br/assets/api/share/alura-start.jpg" type="image/icon type">
@@ -20,7 +21,7 @@
 <!-- main section stars here -->
     <main class="main">
         <div class="cont-logo">
-            <img src="/img/logo_alura.jpg" alt="Logo Alura" title="LogoAlura" class="cont-logo__logo">
+            <img src="img/logo_alura.jpg" alt="Logo Alura" title="LogoAlura" class="cont-logo__logo">
         </div>
 
         <div class="cont-msg">
@@ -41,7 +42,7 @@
         <div class="cont-encrypt-msg">
             <div class="cont-to-encrypt">
                 <div class="cont-no-encrypted-msg">
-                    <img src="/img/buscar.jpg" alt="Not Yet Encrypted" class="cont-no-encrypted-msg__img-encrypted">
+                    <img src="img/buscar.jpg" alt="Not Yet Encrypted" class="cont-no-encrypted-msg__img-encrypted">
                     <h2 class="cont-no-encrypted-msg__not-msg">Ningun mensaje se ha intrucido</h2>
                     <p class="cont-no-encrypted-msg__imput-msg">Ingrese el texto que desea encriptar</p>
                 </div>
@@ -73,7 +74,8 @@
             </div>
 
             <div class="container">
-                <h2 class="container__h2-siguenos">Seguime</h2>
+                <h2 class="container__h2-siguenos">Seguidme</h2>
+                <div></div>
                 <div class="redes-sociales">
                     <a href="" class="redes-sociales__a"><i class="fa-brands fa-github"></i>Github</a>
                     <a href="" class="redes-sociales__a"><i class="fa-brands fa-linkedin-in"></i>LinkedIn</a>
