He añadido un cometario de prueba

--- a/encriptador.html
+++ b/encriptador.html
@@ -18,6 +18,7 @@
 
 </head>
 <body>
+    <!-- esta es una prueba de añadir texto a mi repositorio -->
 <!-- main section stars here -->
     <main class="main">
         <div class="cont-logo">
