--- a/index.html
+++ b/index.html
@@ -76,9 +76,8 @@
 
             <div class="container">
                 <h2 class="container__h2-siguenos">Seguidme</h2>
-                <div></div>
-                <div class="redes-sociales">
-                    <a href="https://github.com/boogramer" class="redes-sociales__a"><i class="fa-brands fa-github"></i>Github</a>
+                <div class="redes">
+                    <a href="https://github.com/boogramer" class="redes__a"><i class="fa-brands fa-square-github"></i>Github</a>
                     <!-- <a href="" class="redes-sociales__a"><i class="fa-brands fa-linkedin-in"></i>LinkedIn</a>
                     <a href="" class="redes-sociales__a"><i class="fa-brands fa-instagram"></i>Instagram</a>
                     <a href="" class="redes-sociales__a"><i class="fa-brands fa-square-facebook"></i>Facebook</a> -->
